some commit message

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/YiWeiShen/Web_Project#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap-icons": "^1.5.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "install": "^0.13.0",
     "mongoose": "^5.13.5",
     "nodemon": "^2.0.12"
   }
